--- a/.github/workflows/run-testinette.yml
+++ b/.github/workflows/run-testinette.yml
@@ -4,24 +4,17 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
-  check_schedule:
-    name: Test schedule
-    runs-on: ubuntu-latest
-    steps:
-      - name: Skip this step every 24 hours
-        if: github.event_name == 'schedule' && github.event.schedule != '0 0 * * *'
-        run: echo "Skipping 24 hours. See you later."
   run-testinette:
-    needs: check_schedule
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ghcr.io/edenschoolfrance/exam_a1-3javascript:latest
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.github_token }}
-      ports:
-        - 80
       volumes:
         - ${{ github.workspace }}:/app/src
       options: --cpus 1
@@ -34,12 +27,24 @@ jobs:
         run: sed -i 's/function/export function/g' /app/src/*
       - name: Running testinette
         run: cd /app && npm run test
+  remove-workflow:
+    if: always()
+    needs: run-testinette
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Delete workflow after execution
-        if: ${{ github.event_name == 'schedule' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          cd $GITHUB_WORKSPACE
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
           rm -f .github/workflows/run-testinette.yml
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git add .github/workflows/run-testinette.yml
-          git commit -m "feat(bot): delete workflow after execution"
+          git commit -m "feat(cicd): delete workflow after test execution"
           git push
